# STK

./: CMakeLists.txt  ReadMe.md
src/: ReadMe.md
src/ast/: ast.hpp
src/lexer/: lexer.cpp  lexer.hpp  tokens.hpp
src/parser/: parser.hpp
